--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,13 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Home
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  This is the home page content.
+  <br>
+  <button ion-button [navPush]="nextPage">Next Page</button>
 </ion-content>
